--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("https://www.google.co.uk/imgres?imgurl=https%3A%2F%2Fwww.gtplanet.net%2Fforum%2Fproxy.php%3Fimage%3Dhttps%253A%252F%252Fupload.wikimedia.org%252Fwikipedia%252Fcommons%252F0%252F04%252FDodge_Viper_SRT-10.jpg%26hash%3D74f436f9e0c945ae1821a3dbaf21795b&imgrefurl=https%3A%2F%2Fwww.gtplanet.net%2Fforum%2Fthreads%2Fgtp-cool-wall-2003-2010-dodge-viper-srt-10.347449%2F&docid=GnP-Je5ofit1FM&tbnid=nO2hV1eEDOBn3M%3A&w=1536&h=933&bih=937&biw=1680&ved=0ahUKEwjaprz6hOLPAhUCOsAKHfrRBvMQMwhWKB0wHQ&iact=mrc&uact=8")
+	background-image: url("https://www.google.co.uk/imgres?imgurl=https%3A%2F%2Fwww.gtplanet.net%2Fforum%2Fproxy.php%3Fimage%3Dhttps%253A%252F%252Fupload.wikimedia.org%252Fwikipedia%252Fcommons%252F0%252F04%252FDodge_Viper_SRT-10.jpg%26hash%3D74f436f9e0c945ae1821a3dbaf21795b&imgrefurl=https%3A%2F%2Fwww.gtplanet.net%2Fforum%2Fthreads%2Fgtp-cool-wall-2003-2010-dodge-viper-srt-10.347449%2F&docid=GnP-Je5ofit1FM&tbnid=nO2hV1eEDOBn3M%3A&w=1536&h=933&bih=937&biw=1680&ved=0ahUKEwjaprz6hOLPAhUCOsAKHfrRBvMQMwhWKB0wHQ&iact=mrc&uact=8");
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
