--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ body {
 		background-repeat: no-repeat;
     background-position: center;
 	background-attachment: fixed;
-}
+  font: Arial;
   color: $darkGray;
 }
 
