--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("https://tse1.mm.bing.net/th?id=OIP.Mc68ee2eaef9a169ba2c7fb7f29852b7eo0&w=217&h=144&c=7&rs=1&qlt=90&o=4&pid=1.1")
+	background-image: url("https://tse1.mm.bing.net/th?&id=OIP.M7a81b6065d776e63ba8bd0e19cc7efceo0&w=300&h=211&c=0&pid=1.9&rs=0&p=0&r=0")
     
 	background-attachment: fixed;
  
