--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,15 @@ body {
     .container {
 background:rgba(255, 255, 255);
 }
+table {
+    border-collapse: collapse;
+	Width: 100%
+}
 
+table, th, td {
+    border: 1px solid black;
+	height: 50px;
+}
 	
  
 }
@@ -32,6 +40,7 @@ background:rgba(255, 255, 255);
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
+	
 }
 
 h1, h2, h3, h4, h5, h6 {
