--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background-color: #751aff;
+	background-color: #0000cc;
     .container {
-background:rgba(255, 255, 255);
+background: rgba(255, 255, 255);
 }
 table {
     border-collapse: collapse;
