--- a/style.scss
+++ b/style.scss
@@ -38,7 +38,7 @@ table, th, td {
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
-	background-color: #cccccc;
+	background-color: rgb(204, 204, 204);
 }
 
 h1, h2, h3, h4, h5, h6 {
