--- a/style.scss
+++ b/style.scss
@@ -39,6 +39,13 @@ table, th, td {
   padding: 0 10px;
   width: 100%;
 	background-color: rgb(179, 179, 179);
+	table {
+    border-collapse: collapse;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
 }
 
 h1, h2, h3, h4, h5, h6 {
