--- a/style.scss
+++ b/style.scss
@@ -39,6 +39,7 @@ table, th, td {
   padding: 0 10px;
   width: 100%;
 	background-color: rgb(179, 179, 179);
+	color: #0d0d0d;
 	table {
     border-collapse: collapse;
 }
