--- a/style.scss
+++ b/style.scss
@@ -38,7 +38,7 @@ table, th, td {
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
-	background-color: rgb(179, 179, 179);
+	background-color:#ffffff;
 	color: #0d0d0d;
 	table {
     border-collapse: collapse;
