--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ html {
 }
 
 body {
-	background-color: #0000cc;
-    
+	
+     background-image: url("http://images.apple.com/v/mac-pro/home/b/images/stills/desktop/macpro_00090.jpg");
 table {
     border-collapse: collapse;
 	
