--- a/style.scss
+++ b/style.scss
@@ -39,7 +39,7 @@ table, th, td {
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
-	background-color: #1a1aff;
+	background-color: #bfbfbf ;
 	color: #0d0d0d;
 	
 }
