--- a/style.scss
+++ b/style.scss
@@ -317,6 +317,7 @@ nav {
 footer {
   padding: 20px 0;
   text-align: center;
+	background-color: $lightGray;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
