--- a/style.scss
+++ b/style.scss
@@ -311,13 +311,13 @@ nav {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
+  background-color: #bfbfbf ;
 }
 
 footer {
   padding: 20px 0;
   text-align: center;
-	background-color: $lightGray;
+	background-color: #bfbfbf ;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
