--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,8 @@ html {
 body {
 	
      background-image: url("https://i.pinimg.com/originals/40/ab/68/40ab688f01b6c4bc94c5b3a0af12c8d2.jpg");
+	background-repeat: no-repeat;
+    background-attachment: fixed;
 	
 	
 table {
